--- a/frontend/src/pages/FrontLeyout/style.module.css
+++ b/frontend/src/pages/FrontLeyout/style.module.css
@@ -3,3 +3,141 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* style.module.css */
+.container {
+  display: flex;
+  flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.header {
+  width: 100%;
+  background-color: rgba(72, 101, 63, 0.97);
+  color: white;
+  padding: 50px 110px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  
+}
+
+.title {
+  margin: 0;
+  font-weight: 800;
+  font-size: 1.5rem;
+  background: linear-gradient(
+    90deg,
+    rgb(244, 202, 96),
+    hsl(51, 91.6%, 72%),
+    rgb(255, 248, 221),
+    rgb(248, 225, 124),
+    rgb(251, 213, 117)
+  );
+  background-size: 200% 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: goldShimmer 4s ease-in-out infinite;
+}
+
+@keyframes goldShimmer {
+  0% {
+    background-position: -150% 0;
+  }
+  50% {
+    background-position: 150% 0;
+  }
+  100% {
+    background-position: -150% 0;
+  }
+}
+
+.nav {
+  display: flex;
+  gap: 2rem;
+  position: relative;
+}
+
+.corbCount {
+    display: flex;
+    position: absolute;
+    top:-25px;
+    right: 5px;
+    padding: 5px;
+    color:red;
+    font-size: 16px;
+    font-weight: bolder;
+}
+
+.wishlist{
+     display: flex;
+    position: absolute;
+    top:-25px;
+    right: 83px;
+    padding: 5px;
+    color:red;
+    font-size: 16px;
+    font-weight: bolder;
+}
+
+.link {
+  color: white;
+  text-decoration: none;
+  transition: color 0.2s ease;
+}
+.link:hover {
+  color: #ffd700;
+}
+.active {
+  color: #ffd700;
+  text-decoration: underline;
+  text-underline-offset: 8px;
+  font-weight: bold;
+}
+
+.footer {
+  width: 100%;
+  background-color: rgba(67, 104, 70, 0.97);
+  color: white;
+  padding: 50px 110px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footerSection {
+  flex: 1;
+  min-width: 200px;
+  padding: 0 1rem;
+}
+
+.footerHeading {
+  margin-bottom: 0.5rem;
+  padding-bottom: 0.25rem;
+  border-bottom: 2px solid #ffd700;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 1.5rem;
+  background: linear-gradient(
+    90deg,
+    rgb(255, 223, 144),
+    rgb(253, 241, 171),
+    rgb(255, 251, 236),
+    rgb(255, 242, 166),
+    rgb(255, 225, 150)
+  );
+  background-size: 200% 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: goldShimmer 4s ease-in-out infinite;
+}
+
+.footerList {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
