--- a/frontend/src/pages/FrontLeyout/style.module.css
+++ b/frontend/src/pages/FrontLeyout/style.module.css
@@ -4,26 +4,27 @@
     box-sizing: border-box;
 }
 
-/* style.module.css */
 .container {
   display: flex;
   flex-direction: column;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+  min-height: 100vh; 
 }
 
+
 .header {
+  gap: 500px;
+  position: fixed;
   width: 100%;
-  background-color: rgba(72, 101, 63, 0.97);
+  top: 0;
+  left: 0;
+  background-color: rgb(67, 104, 70);
   color: white;
-  padding: 50px 110px;
+  padding: 40px 0;
   display: flex;
-  justify-content: space-between;
+  justify-content:space-evenly;
   align-items: center;
   box-sizing: border-box;
-  
+  z-index: 1000;
 }
 
 .title {
@@ -60,28 +61,34 @@
   display: flex;
   gap: 2rem;
   position: relative;
+  font-size: 19px;
 }
 
 .corbCount {
+    background-color: #ffcc00;
+    border-radius: 140px;
     display: flex;
     position: absolute;
-    top:-25px;
-    right: 5px;
-    padding: 5px;
-    color:red;
-    font-size: 16px;
+    top: -15px;
+    right: 8px;
+    padding: 0px 6px;
+    color:rgb(92, 121, 79);
+    font-size: 12px;
     font-weight: bolder;
 }
 
 .wishlist{
+  background-color: #ffcc00;
      display: flex;
     position: absolute;
-    top:-25px;
-    right: 83px;
-    padding: 5px;
-    color:red;
-    font-size: 16px;
+    top:-15px;
+    right: 95px;
+    padding: 0 6px;
+    color: rgb(92, 121, 79);
+    font-size: 12px;
     font-weight: bolder;
+        border-radius: 140px;
+
 }
 
 .link {
@@ -98,30 +105,42 @@
   text-underline-offset: 8px;
   font-weight: bold;
 }
+.mainContent {
+  flex: 1;
+  width: 100%;
+  padding-top: 130px; 
+  padding-bottom: 50px;
+}
 
 .footer {
+  max-width: 100%;
+  overflow-x: hidden;
   width: 100%;
-  background-color: rgba(67, 104, 70, 0.97);
+  background-color: rgb(67, 104, 70);
   color: white;
-  padding: 50px 110px;
+  padding: 40px 70px 40px 120px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .footerSection {
   flex: 1;
   min-width: 200px;
+  max-width: 300px;
   padding: 0 1rem;
+  box-sizing: border-box;
 }
 
 .footerHeading {
-  margin-bottom: 0.5rem;
-  padding-bottom: 0.25rem;
-  border-bottom: 2px solid #ffd700;
+  margin-bottom: 1.5rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 2px solid #ffcc00;
   display: inline-block;
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   background: linear-gradient(
     90deg,
     rgb(255, 223, 144),
@@ -139,5 +158,5 @@
 .footerList {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+  gap: 1.7rem;
 }
