--- a/frontend/src/sliderComponent/style.module.css
+++ b/frontend/src/sliderComponent/style.module.css
@@ -1,4 +1,3 @@
-/* SwiperSlider.module.css */
 :global(.swiper-pagination-progressbar) {
   background: #ddd;
   height: 4px;
@@ -6,10 +5,11 @@
 }
 
 :global(.swiper-pagination-progressbar-fill) {
-  background: red;
+  background: rgb(201, 201, 201);
 }
 
 :global(.swiper-button-next),
 :global(.swiper-button-prev) {
-  color: black;
+  color: rgb(255, 230, 0);
 }
+
