--- a/frontend/src/pages/Details/animalDetails.module.css
+++ b/frontend/src/pages/Details/animalDetails.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  width: 1200px;
   justify-content: center; 
   align-items: flex-start;
   gap: 3rem;                
@@ -11,8 +12,8 @@
 }
 
 .image {
-  width: 700px;
-  height: auto;
+  width: 500px;
+  height: 500px;
   border-radius: 18px 0 0 18px;
   box-shadow: -10px 10px 30px rgba(0, 0, 0, 0.376);
   margin-right: 50px;
@@ -23,7 +24,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 10px;
   font-size: 18px;
 }
 .nameTitle {
