--- a/frontend/src/pages/Home_page/style.module.css
+++ b/frontend/src/pages/Home_page/style.module.css
@@ -133,10 +133,20 @@
 .heart:hover {
   color: red;
 }
+.activeHeart{
+  color: red;
+  font-size: 28px;
+  font-weight: bolder;
+}
 
 
 .cart:hover {
   color: #ffcc00;
+}
+.activeBasket{
+  color: #ffcc00;
+  font-size: 28px;
+  font-weight: bolder;
 }
 
 .outOfStock {
@@ -172,7 +182,6 @@
 .pageHeader {
   font-size: 2rem;
   font-weight: bold;
-  color: #565756;
   padding-left: 0.5rem;
   border-left: 9px solid rgb(255, 204, 0);
   border-radius: 50px;
@@ -200,5 +209,44 @@
  outline: 2px solid #ffc823;
   outline-offset: 2px;
   background-color: #ffffff;
-  color: #ffcc00;}
+  color: #ffcc00;
+}
 
+.fixedRightBar {
+  position: fixed;
+  right: 20px;
+  top: 200px;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  z-index: 1000;
+}
+
+.fixedRightBar button {
+  padding: 2px;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+  font-size: 32px;
+}
+
+.fixedRightBar button:hover {
+  background-color: #f0f0f0;
+}
+.searchInput {
+  width: 600px;
+  margin: 15px auto;
+  border: 3px solid #0044cc; 
+  padding: 10px 15px;
+  border-radius: 7px;
+  font-size: 16px;
+  outline: none;
+  box-sizing: border-box;
+}
+.searchInput::placeholder {
+  color: white;
+  opacity: 0.7;
+}
