--- a/frontend/src/pages/header/header.module.css
+++ b/frontend/src/pages/header/header.module.css
@@ -5,6 +5,7 @@
 }
 
 
+
 .header {
  position: fixed;
   width: 100%;
@@ -12,18 +13,26 @@
   left: 0;
   background-color: rgb(67, 104, 70);
   color: white;
-  padding: 40px 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   z-index: 1000;
-  gap:180px;
+}
+.headerContant{
+display: flex;
+width: 1150px;
+justify-content: space-between;
+align-items: center;
+margin: 0 auto;
+padding: 50px 0 ;
+
+  
 }
 
 .title {
   margin: 0;
   font-weight: 800;
-  font-size: 24px;
+  font-size: 32px;
   background: linear-gradient(
     90deg,
     rgb(244, 202, 96),
